syntax = "proto3";

option java_multiple_files = true;
option java_package = "inverse";
option java_outer_classname = "Inverse";

package inverse;

message InverseRequest {
  float number = 1;
}

message InverseResponse {
  float inverse = 1;
}

service InverseService {
  rpc inverseNumber(InverseRequest) returns(InverseResponse) {}
}
